--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {
+    "chess.js": "^0.10.2",
     "react": "^15.3.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.3.1"
-  },
-  "devDependencies": {
+    "react-dom": "^15.3.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -23,5 +24,8 @@
     "jsx-loader": "^0.13.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
+  },
+  "jshintConfig": {
+    "esversion": 6
   }
 }
