--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "chess.js": "^0.10.2",
     "eslint": "^3.17.1",
     "eslint-plugin-react": "^6.10.0",
+    "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "lodash": "^4.17.4",
+    "protobufjs": "^6.6.5",
     "react": "^15.3.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
